1.8 (released xx.xx.xxxx)

* Added support for ZPAQ archives.
  Closes: GH bug #14


1.7 (released 27.6.2014)

* Configure the xz program to also extract LZMA files.
* Fixed creation of LZMA files with the Python lzma module.
* Handle *.epub and *.apk files as ZIP files.


1.6 (released 8.6.2014)

* Search /usr/local/lib for p7zip RAR modules.
  Closes: GH bug #10


1.5 (released 30.3.2014)

* Fix detection of existing broken symlinks when unpacking.


1.4 (released 2.9.2013)

* Add missing GZIP creation support for 7z modules.
  Closes: GH bug #6


1.3 (released 19.7.2013)

* Add patoolib.__version__ (see PEP 396).
  Closes: GH bug #3
* Improved detection of LZMA and LRZIP files with file(1).
* Add missing patoolib.programs to Windows installer.
  Closes: GH bug #5


1.2 (released 27.6.2013)

* Fix detection of *.gz with newer libmagic versions.
  Closes: GH bug #2


1.1 "Clerks" (released 7.4.2013)

* Add support for zopfli, Googles new zlib compressor.
* Fix an error repacking compressed tar archives with 7z.


1.0 "Robot and Frank" (released 1.3.2013)

* Add support for searching in archive contents.
* Add support for ISO image handling.
* Allow multiple --verbose options to increase program output.
* Add patool.exe to the PATH in the windows installer.
* Fixed Python lzma archive handling.
* Fixed lzop, lrzip and rzip archive handling.
* Fixed Python 3.x support.


0.19 "The Kids Are All Right" (released 21.2.2013)

* Support the lzma module in Python >= 3.3
* Optimize repacking of archives with the same format.
  Closes: GH bug #1


0.18 "Skyfall" (released 15.12.2012)

* Fixed unadf archive listing.
* Added support for Python 3.x.
* Use importlib to find program modules and depend on Python >= 2.7.
* Added support for archmage and chmlib handling CHM (.chm) archives.


0.17 "I am Bruce Lee" (released 4.8.2012)

* Added support for Monkey's Audio Compressor handling APE (.ape) archives.
* Added support for shorten handling SHN (.shn) archives.