@@ -1,5 +1,5 @@
 .\"                                      -*- nroff -*-
-.\" Copyright (C) 2010-2014 Bastian Kleineidam
+.\" Copyright (C) 2010-2015 Bastian Kleineidam
 .\"
 .\" This program is free software: you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
@@ -94,7 +94,8 @@ List files in archives.
 Create an archive from given files. All of the given files to add
 to the archive must be readable by the current user.
 The format of the archive to create is determined by the archive file
-extension.
+extension. If the archive program has options to maximize file compression,
+\fBpatool\fP uses those options.
 .SS test
 \fBpatool\fP \fBtest\fP <\fIarchive\fP>...
 .PP
@@ -137,4 +138,4 @@ When running under a Unix shell the following aliases can be defined to save som
 .SH AUTHOR
 Bastian Kleineidam <bastian.kleineidam@web.de>
 .SH COPYRIGHT
-Copyright \(co 2010-2014 Bastian Kleineidam
+Copyright \(co 2010-2015 Bastian Kleineidam
