@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# Copyright (C) 2011-2012 Bastian Kleineidam
+# Copyright (C) 2011-2015 Bastian Kleineidam
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -14,10 +14,19 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 """Archive commands for the clzip program."""
-from . import extract_singlefile_standard, \
-    test_singlefile_standard, create_singlefile_standard
+from . import extract_singlefile_standard, test_singlefile_standard
+from .. import util
 
 
 extract_lzip = extract_singlefile_standard
 test_lzip = test_singlefile_standard
-create_lzip = create_singlefile_standard
+
+def create_lzip(archive, compression, cmd, verbosity, filenames):
+    """Create an LZIP archive."""
+    cmdlist = [util.shell_quote(cmd)]
+    if verbosity > 1:
+        cmdlist.append('-v')
+    cmdlist.extend(['-c', '-9', '--'])
+    cmdlist.extend([util.shell_quote(x) for x in filenames])
+    cmdlist.extend(['>', util.shell_quote(archive)])
+    return (cmdlist, {'shell': True})
