@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# Copyright (C) 2010-2014 Bastian Kleineidam
+# Copyright (C) 2010-2015 Bastian Kleineidam
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -14,14 +14,12 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 """Archive commands for the xz program."""
-from . import extract_singlefile_standard, \
-    test_singlefile_standard, create_singlefile_standard
+from . import extract_singlefile_standard, test_singlefile_standard
 from .. import util
 
 
 extract_xz = extract_singlefile_standard
 test_xz = test_singlefile_standard
-create_xz = create_singlefile_standard
 
 def list_xz (archive, compression, cmd, verbosity):
     """List a XZ archive."""
@@ -31,6 +29,17 @@ def list_xz (archive, compression, cmd, verbosity):
         cmdlist.append('-v')
     cmdlist.append(archive)
     return cmdlist
+
+
+def create_xz(archive, compression, cmd, verbosity, filenames):
+    """Create an XZ archive."""
+    cmdlist = [util.shell_quote(cmd)]
+    if verbosity > 1:
+        cmdlist.append('-v')
+    cmdlist.extend(['-c', '-9', '--'])
+    cmdlist.extend([util.shell_quote(x) for x in filenames])
+    cmdlist.extend(['>', util.shell_quote(archive)])
+    return (cmdlist, {'shell': True})
 
 
 def extract_lzma(archive, compression, cmd, verbosity, outdir):
@@ -58,7 +67,7 @@ def create_lzma(archive, compression, cmd, verbosity, filenames):
     cmdlist = [util.shell_quote(cmd), '--format=lzma']
     if verbosity > 1:
         cmdlist.append('-v')
-    cmdlist.extend(['-c', '--'])
+    cmdlist.extend(['-c', '-9', '--'])
     cmdlist.extend([util.shell_quote(x) for x in filenames])
     cmdlist.extend(['>', util.shell_quote(archive)])
     return (cmdlist, {'shell': True})
