@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# Copyright (C) 2010-2014 Bastian Kleineidam
+# Copyright (C) 2010-2015 Bastian Kleineidam
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,7 +17,7 @@
 
 def create_zip (archive, compression, cmd, verbosity, filenames):
     """Create a ZIP archive."""
-    cmdlist = [cmd, '-r']
+    cmdlist = [cmd, '-r', '-9']
     if verbosity > 1:
         cmdlist.append('-v')
     cmdlist.append(archive)
